Add loading spinner by default

--- a/src/UI/Html/index.html
+++ b/src/UI/Html/index.html
@@ -188,13 +188,13 @@
     <div class="container">
       <div class="content">
         <div class="tab-content active" id="browse">
-          <p>No packages found.</p>
+          <div class="loading-spinner"><i class="fa-solid fa-spinner fa-spin"></i></div>
         </div>
         <div class="tab-content" id="installed">
-          <p>No installed packages.</p>
+          <div class="loading-spinner"><i class="fa-solid fa-spinner fa-spin"></i></div>
         </div>
         <div class="tab-content" id="updates">
-          <p>No updates available.</p>
+          <div class="loading-spinner"><i class="fa-solid fa-spinner fa-spin"></i></div>
         </div>
       </div>
       <div class="sidebar" id="sidebar">
